--- a/lht_columns.css
+++ b/lht_columns.css
@@ -6,8 +6,8 @@
    Case Problem 3
 
    Columns Style Sheet
-   Author: 
-   Date:   
+    Author: Todd Adcox Jr 
+    Date:  12-12-18  
 
    Filename:   lht_columns.css
 
@@ -16,4 +16,3 @@
 
 
 /* Column Styles */
-
