--- a/lht_tables.css
+++ b/lht_tables.css
@@ -77,7 +77,7 @@
 */
 /*This is a media query for screen devices with a minimum width of 641 pixels. */
 @media only screen and (min-width: 641px) {
-    
+
     /*This affects the table element, it is displaying the background image to lht_photo1.png with no tiling and is only showing up in the bottom-right corner of the table with a width of 40%, adds a 6-pixel double border with color value rgb(154, 64, 3), sets the table borders to be collapsed, sets top and bottom margins to 20 pixels, the left and right margins to auto, uses a fixed layout for the table content, and sets the width to 85%. */
     table {
         background-image: url(lht_photo1.png);
@@ -91,9 +91,10 @@
         width: 85%;
     }
 
-    /* 17. For every heading and data cell it adds a 1-pixel solid gray border, sets the font size to 0.85em and with normal weight has 5 pixels of padding space,maligns the cell text with the top of the cell, sets the width to 14.28%, and
+    /* For every th and td, it adds a 1-pixel solid gray border, sets the font size to 0.85em and has normal weight has 5 pixels of padding space, aligns the cell text with the top of the cell, sets the width to 14.28%, and
     allows the browser to wrap cell text within individual words */
-    th, td {
+    th,
+    td {
         border: 1px solid gray;
         font-size: 0.85em;
         font-weight: normal;
@@ -110,12 +111,13 @@
     }
 
     td {
-        content: attr(data-date:Feb);
+
         background-color: rgba(232, 214, 148, 0.6);
-        box-shadow: inset, gray 0px 0px 20px;
-        
+        box-shadow: inset gray 0px 0px 20px;
     }
 }
+
+
 
 
 /* 
